Replace index.html with redirect to public/index.html
The original content has been replaced with a redirect to ./public/index.html.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Valentine?</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <meta http-equiv="refresh" content="0; url=./public/index.html">
+    
+    <title>Redirecting...</title>
+    
+    <script type="text/javascript">
+        window.location.href = "./public/index.html";
+    </script>
 </head>
 <body>
-
-    <div class="container">
-        <div id="question-screen">
-            <img class="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04P7yCO/giphy.gif" alt="Cute Bear">
-            <h1>Will you be my Valentine?</h1>
-            <div class="button-group">
-                <button id="yes-btn">Yes</button>
-                <button id="no-btn">No</button>
-            </div>
-        </div>
-
-        <div id="success-screen" class="hidden">
-            <img class="gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3R6eW55b254d255a255a255a255a255a255a255/26BRv0ThflsKCqLxS/giphy.gif" alt="Happy Hug">
-            <h1>Yay! I love you! ❤️</h1>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="script.js"></script>
+    <p>If you are not redirected automatically, <a href="./public/index.html">click here</a>.</p>
 </body>
 </html>
