--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=./public/index.html">
+    <meta http-equiv="refresh" content="0; url=./Public/index.html">
     
     <title>Redirecting...</title>
     
@@ -14,3 +14,4 @@
     <p>If you are not redirected automatically, <a href="./public/index.html">click here</a>.</p>
 </body>
 </html>
+
